--- a/css/style.css
+++ b/css/style.css
@@ -417,3 +417,17 @@ align-items: center;}
 }
 .ul-footer{gap:10px;
 }
+.is-hidden{opacity: 0;
+visibility: hidden;
+pointer-events: none;}
+
+.close-btn{position: absolute;
+top:8px;
+right:8px;
+width:30px;
+height:30px;
+background-color: #fff;
+border:1px solid rgba(0,0,0,0.1);
+border-radius: 50%;
+cursor:pointer;
+}
