--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: inherit;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .links:focus {
   color: var(--highlight-color);
@@ -166,6 +168,8 @@ body {
 .links-footer {
   color: var(--links-footer-color);
   font-style: normal;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 address > ul > li > p {
   color: var(--logo-color);
@@ -201,7 +205,8 @@ address > ul > li > p {
   padding: 6px 22px;
   border-radius: 4px;
   margin-bottom: 30px;
-
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: none;
 }
 .figcaption-main {
@@ -342,6 +347,8 @@ fill:var(--highlight-color);}
  #AFB1B8;
  border-radius: 4px;
  padding:16px 32px;
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+ fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
 .social-content{
@@ -350,7 +357,8 @@ fill:var(--highlight-color);}
 }
 .footer-icon{
   fill:#ffffff;
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -397,6 +405,8 @@ fill:#ffffff;
 display:flex;
 justify-content: center;
 align-items: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .a-team:hover, .a-team:focus{
 background-color:var(--highlight-color);
@@ -409,7 +419,9 @@ border-radius:50%;
   background-color: rgba(255, 255, 255, 0.1);
   display:flex;
 justify-content: center;
-align-items: center;}
+align-items: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .a-footer:hover,
 .a-footer:focus{
