--- a/css/style.css
+++ b/css/style.css
@@ -443,3 +443,18 @@ border:1px solid rgba(0,0,0,0.1);
 border-radius: 50%;
 cursor:pointer;
 }
+.overlay{
+  display:flex;
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:00000033;
+  justify-content: center;
+  align-items: center;
+}
+.modal{width:530px;
+height: 580px;
+position: relative;
+background: #fff;}
