--- a/css/style.css
+++ b/css/style.css
@@ -133,8 +133,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: inherit;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 .links:focus {
   color: var(--highlight-color);
@@ -168,8 +168,8 @@ body {
 .links-footer {
   color: var(--links-footer-color);
   font-style: normal;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  
 }
 address > ul > li > p {
   color: var(--logo-color);
@@ -205,8 +205,9 @@ address > ul > li > p {
   padding: 6px 22px;
   border-radius: 4px;
   margin-bottom: 30px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: none;
 }
 .figcaption-main {
@@ -347,8 +348,8 @@ fill:var(--highlight-color);}
  #AFB1B8;
  border-radius: 4px;
  padding:16px 32px;
- transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
- fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
  }
 
 .social-content{
@@ -357,8 +358,8 @@ fill:var(--highlight-color);}
 }
 .footer-icon{
   fill:#ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   
 }
 
@@ -377,8 +378,10 @@ fill:var(--highlight-color);}
 
 }
 .div-secondary{
-  margin-left:70px;
-}
+  margin-left:70px;}
+
+  .figure-portfolio{transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
 .figure-portfolio:hover,
 .figure-portfolio:focus{
 
@@ -405,8 +408,7 @@ fill:#ffffff;
 display:flex;
 justify-content: center;
 align-items: center;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .a-team:hover, .a-team:focus{
 background-color:var(--highlight-color);
@@ -420,8 +422,7 @@ border-radius:50%;
   display:flex;
 justify-content: center;
 align-items: center;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .a-footer:hover,
 .a-footer:focus{
