--- a/css/style.css
+++ b/css/style.css
@@ -459,3 +459,32 @@ cursor:pointer;
 height: 580px;
 position: relative;
 background: #fff;}
+
+.about-us-text{
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height:1,14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+color:#ffffff;
+text-align: center;
+background-color: #2F303ACC;
+position:absolute;
+padding-top:27px;
+padding-bottom:27px;
+width:370px;
+left:0;
+bottom:0}
+
+
+
+.about-us-box{
+  position:relative;
+display: flex;
+  
+  
+  
+}
