--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,8 @@ fill:var(--highlight-color);}
 .div-secondary{
   margin-left:70px;}
 
-  .figure-portfolio{transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+  .figure-portfolio{transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position:relative;}
 
 .figure-portfolio:hover,
 .figure-portfolio:focus{
@@ -501,7 +502,21 @@ bottom:0}
 .about-us-box{
   position:relative;
 display: flex;
-  
-  
-  
 }
+  .technocrack-container{
+    position:absolute;
+  }
+
+  .technocrack-text{font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.03;
+    background-color: rgba(33, 150, 243, 0.9);
+  color:#ffffff;
+padding-left:24px;
+padding-top:49px;
+padding-bottom:49px;
+padding-right:45px;}
+  
