--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ fill:var(--highlight-color);}
  {
   opacity:1; 
   transform: scale(1);
-  transform: translateY(-100%);
+  transform: translateY(0);
   
 }
 .social.icons-team{border-radius: 50%;
@@ -516,10 +516,11 @@ display: flex;
     position:absolute;
     opacity: 0;
     transform:scale(0);
-    transform: translatey(0);
+    transform: translatey(100%);
     transition: transform 250ms ease;
    top:0;
     left:0;
+    
   
   }
 
