--- a/css/style.css
+++ b/css/style.css
@@ -478,14 +478,16 @@ cursor:pointer;
   left:0;
   width:100%;
   height:100%;
-  background:00000033;
+  background-color:#00000033;
   justify-content: center;
   align-items: center;
+
 }
 .modal{width:530px;
 height: 580px;
 position: relative;
-background: #fff;}
+background: #fff;
+}
 
 .about-us-text{
   font-family: "Roboto";
