--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,10 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 }
 .is-hidden{opacity: 0;
 visibility: hidden;
-pointer-events: none;}
+pointer-events: none;
+transform:scale(0);
+transition:transform 250ms ease;}
+
 
 .close-btn{position: absolute;
 top:8px;
@@ -487,6 +490,12 @@ cursor:pointer;
 height: 580px;
 position: relative;
 background: #fff;
+transform:scale(1);
+
+
+
+
+
 }
 
 .about-us-text{
