--- a/css/style.css
+++ b/css/style.css
@@ -457,13 +457,18 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 }
 .ul-footer{gap:10px;
 }
+
 .is-hidden{opacity: 0;
 visibility: hidden;
 pointer-events: none;
 transform:scale(0);
-transition:transform 250ms ease;}
 
 
+
+
+
+
+}
 .close-btn{position: absolute;
 top:8px;
 right:8px;
@@ -485,18 +490,22 @@ cursor:pointer;
   justify-content: center;
   align-items: center;
 
+  
+  
 }
-.modal{width:530px;
+
+.modal
+{width:530px;
 height: 580px;
 position: relative;
 background: #fff;
-transform:scale(1);
-
-
-
-
+transform: scale(1);
+transition:transform 250ms linear;
 
 }
+.overlay.is-hidden .modal {
+
+transform: scale(0);}
 
 .about-us-text{
   font-family: "Roboto";
@@ -523,28 +532,22 @@ bottom:0}
   position:relative;
 display: flex;
 }
-  .technocrack-container{
-    position:absolute;
-    opacity: 0;
-    transform:scale(0);
-    transform: translatey(100%);
-    transition: transform 250ms ease;
-   top:0;
-    left:0;
-    
-  
-  }
+.technocrack-container{
+position:absolute;
+opacity: 0; 
+transform:scale(0);
+transform: translatey(100%);
+transition: transform 250ms ease;
+top:0;
+left:0;}
 
-
-
-  .technocrack-text{font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.55;
-    letter-spacing: 0.03;
-    background-color: rgba(33, 150, 243, 0.9);
-  color:#ffffff;
+.technocrack-text{font-family: "Roboto";
+font-style: normal;
+font-weight: 400;
+font-size: 18px;line-height: 1.55;
+letter-spacing: 0.03;
+background-color: rgba(33, 150, 243, 0.9);
+color:#ffffff;
 padding-left:24px;
 padding-top:49px;
 padding-bottom:49px;
