--- a/css/style.css
+++ b/css/style.css
@@ -407,12 +407,17 @@ fill:var(--highlight-color);}
   box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
   1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+.technocrack-div:hover{
+  box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+  1px 4px 6px rgba(0, 0, 0, 0.16);
 
+}
 .figure-portfolio:hover .technocrack-container
  {
   opacity:1; 
   transform: scale(1);
   transform: translateY(0);
+  
   
 }
 .social.icons-team{border-radius: 50%;
@@ -554,3 +559,6 @@ padding-bottom:49px;
 padding-right:45px;
 }
   
+.technocrack-div{
+  overflow:hidden;
+}
