--- a/css/style.css
+++ b/css/style.css
@@ -400,18 +400,11 @@ fill:var(--highlight-color);}
   .figure-portfolio{transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position:relative;
 }
-
-.figure-portfolio:hover,
-.figure-portfolio:focus{
-
+.portfolio-img>li:hover{
   box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
   1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.technocrack-div:hover{
-  box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-  1px 4px 6px rgba(0, 0, 0, 0.16);
 
-}
 .figure-portfolio:hover .technocrack-container
  {
   opacity:1; 
